fix: padding on smaller devices

--- a/sass/Footer.module.sass
+++ b/sass/Footer.module.sass
@@ -18,6 +18,8 @@ footer.box
         @media screen and (max-width: 550px)
             flex-direction: column
             align-items: flex-start
+        @media screen and (max-width: 500px)
+            width: calc(100% - 20px * 2)
         & header
             & div.title
                 font-size: 20px
