--- a/sass/Navigation.module.sass
+++ b/sass/Navigation.module.sass
@@ -14,6 +14,8 @@ nav.box
             width: calc(100% - 70px * 2)
         @media screen and (max-width: 1100px)
             width: calc(100% - 40px * 2)
+        @media screen and (max-width: 500px)
+            width: calc(100% - 20px * 2)
     & div.flex
         display: flex
         align-items: center
