--- a/sass/globals.sass
+++ b/sass/globals.sass
@@ -34,3 +34,5 @@ body
             width: calc(100% - 70px * 2)
         @media screen and (max-width: 1100px)
             width: calc(100% - 40px * 2)
+        @media screen and (max-width: 500px)
+            width: calc(100% - 20px * 2)
